add getNft details and docs
