# src/nft/nft.dto.ts
@@ -1,5 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsEnum, IsString, IsUrl } from 'class-validator';
+import { Type } from 'class-transformer';
+import { IsEnum, IsNumber, IsString, IsUrl, Max, Min } from 'class-validator';
 import { Network } from 'src/providers/algo/algo.config';
 
 export class MintNftDTO {
@@ -11,7 +12,7 @@ export class MintNftDTO {
   assetName: string;
   @ApiProperty({
     description: 'The name of the unit/token',
-    example: 'TNFT',
+    example: 'AKNFT',
   })
   @IsString()
   unitName: string;
@@ -28,7 +29,78 @@ export class MintNftDTO {
   @ApiProperty({
     description: 'The name of the asset/nft',
     enum: Network,
+    example: Network.ALGORAND_TESTNET,
   })
   @IsEnum(Network)
   network: Network;
+}
+export class MintNftResponseDTO {
+  @ApiProperty({
+    description: 'ID of the asset/nft',
+    example: 86862666,
+  })
+  assetId: number;
+  @ApiProperty({
+    description: 'Algorand Account that has the NFT in it',
+    example: {
+      publicAddress:
+        'CJAQ2O2SMRNI6TB53C36X2C2WDDC64XJ5IBGNQF3SR2NOXUKZH62WKQCEA',
+      mnemonicKey: 'jaguar dinosaur mammal two small ...',
+    },
+  })
+  algoAccount: {
+    publicAddress: string;
+    mnemonicKey: string;
+  };
+}
+export class GetNftDTO {
+  @ApiProperty({
+    description: 'ID of the asset/nft',
+    example: 86862666,
+  })
+  @IsNumber()
+  @Type(() => Number)
+  @Min(10000000)
+  @Max(999999999)
+  assetId: number;
+  @ApiProperty({
+    description: 'The name of the asset/nft',
+    enum: Network,
+    example: Network.ALGORAND_TESTNET,
+  })
+  @IsEnum(Network)
+  network: Network;
+}
+
+export class GetNftResponseDTO {
+  @ApiProperty({ description: 'ID of the asset/nft', example: 86862666 })
+  index: number;
+  @ApiProperty({
+    description: 'Details of the asset',
+    example: {
+      creator: 'ZW5AMTXITMRZJV7IZ7MZF6ISJ56HZ63SYBWVZQRIH4KBS26L22J74BX3HI',
+      decimals: 0,
+      'default-frozen': false,
+      name: 'test-nft',
+      'name-b64': 'dGVzdC1uZnQ=',
+      total: 1,
+      'unit-name': 'TNFT',
+      'unit-name-b64': 'VE5GVA==',
+      url: 'https://ipfs.io/ipfs/QmbcqLtgWsB6E4PPwoKSYPJaM8c7EsjGLPn48owdRQWy42',
+      'url-b64':
+        'aHR0cHM6Ly9pcGZzLmlvL2lwZnMvUW1iY3FMdGdXc0I2RTRQUHdvS1NZUEphTThjN0VzakdMUG40OG93ZFJRV3k0Mg==',
+    },
+  })
+  params: {
+    creator: string;
+    decimals: number;
+    'default-frozen': boolean;
+    name: string;
+    'name-b64': string;
+    total: number;
+    'unit-name': string;
+    'unit-name-b64': string;
+    url: string;
+    'url-b64': string;
+  };
 }
